# tvbox_config

./: .gitattributes  .gitignore  AGENTS.md  README.md  generate_json.py  ipv6.m3u  main.py  my.json  my_history.json  package_esp32_index.json  pyproject.toml  tvbox.json  tvbox_history.json  update_fl.py
.github/workflows/: daily_update.yml
config/: history.yaml  sources.yaml
fl/: 2.json  FL.txt  live.txt
fl/source/: 2.json  FL.txt  date.txt
src/: __init__.py  app.py  http_client.py  json_builder.py  logger.py  models.py  source_manager.py
src/tvbox_config/: __init__.py  _check.py  app.py  decrypt.py  http_client.py  json_builder.py  logger.py  models.py  source_manager.py
temp/6758/: 本地仓库.json
temp/6758/天上人间/: 2.json  FL.txt
temp/6758/白虎/: 白虎.json  白虎.txt
temp/6758/青龙/: 1.json  2.json  cattv.txt  feimaolive.json  河马短剧.py
tests/: test_app.py  test_decrypt.py  test_http_client.py  test_json_builder.py  test_models.py  test_source_manager.py
