[project]
name = "tvbox_config"
version = "1.1.0"
description = "TVBox source checker and JSON generator"
requires-python = ">=3.12"
dependencies = [
    "dirtyjson>=1.0.8",
    "httpx>=0.27.0",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
    "ty>=0.0.46",
]

[project.scripts]
tvbox-config = "tvbox_config.app:main"
check = "tvbox_config._check:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tvbox_config"]

[tool.ty.environment]
python = ".venv"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["B", "E", "F", "I", "N", "W", "UP"]
fixable = ["ALL"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
docstring-code-format = true
